# MachineLearningProjectdefou

./: .gitignore  README.md  install.sh  main.py  pyproject.toml
Projet/: Ingenierie_des_donnees_textuelles.ipynb  ScientificModel.pkl  Untitled.ipynb
